@@ -50,6 +50,9 @@
    - dtucker@cvs.openbsd.org 2013/05/16 09:12:31
      [readconf.c servconf.c]
      switch RekeyLimit traffic volume parsing to scan_scaled.  ok djm@
+   - dtucker@cvs.openbsd.org 2013/05/16 10:43:34
+     [servconf.c readconf.c]
+     remove now-unused variables
  - (dtucker) [configure.ac readconf.c servconf.c
      openbsd-compat/openbsd-compat.h] Add compat bits for scan_scaled.
 
